# manipulator_control_gui

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
resources/: manipulator_dashboard.ui
scripts/: manipulator_control_gui.py
src/manipulator_control_gui/: manipulator_dashboard.py
